Downgraded ink drop DCHECKs to DLOGs.

The DCHECKs were failing due to race conditions during a heavily loaded system
which is outside the scope of what they are supposed to be detecting, namely
incorrect input event streams.

Bug: 712715, 737449
Change-Id: I5d540233f520cea304810b7bc64b7e3cd8dc71e7
Reviewed-on: https://chromium-review.googlesource.com/610364
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Ben Ruthig <bruthig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493530}
Former-commit-id: b380725a81987b7ff8725ad40a02306ebdd358c9