ui/views/animation/square_ink_drop_ripple.cc
@@ -240,8 +240,11 @@ void SquareInkDropRipple::AnimateStateChange(
     case InkDropState::ACTION_PENDING:
       if (old_ink_drop_state == new_ink_drop_state)
         return;
-      DCHECK_EQ(InkDropState::HIDDEN, old_ink_drop_state)
-          << " old_ink_drop_state=" << ToString(old_ink_drop_state);
+      DLOG_IF(WARNING, InkDropState::HIDDEN != old_ink_drop_state)
+          << "Invalid InkDropState transition. old_ink_drop_state="
+          << ToString(old_ink_drop_state)
+          << " new_ink_drop_state=" << ToString(new_ink_drop_state);
+
       AnimateToOpacity(visible_opacity_,
                        GetAnimationDuration(ACTION_PENDING_FADE_IN),
                        ui::LayerAnimator::IMMEDIATELY_ANIMATE_TO_NEW_TARGET,
@@ -257,9 +260,12 @@ void SquareInkDropRipple::AnimateStateChange(
                           gfx::Tween::EASE_IN_OUT, animation_observer);
       break;
     case InkDropState::ACTION_TRIGGERED: {
-      DCHECK(old_ink_drop_state == InkDropState::HIDDEN ||
-             old_ink_drop_state == InkDropState::ACTION_PENDING)
-          << " old_ink_drop_state=" << ToString(old_ink_drop_state);
+      DLOG_IF(WARNING, old_ink_drop_state != InkDropState::HIDDEN &&
+                           old_ink_drop_state != InkDropState::ACTION_PENDING)
+          << "Invalid InkDropState transition. old_ink_drop_state="
+          << ToString(old_ink_drop_state)
+          << " new_ink_drop_state=" << ToString(new_ink_drop_state);
+
       if (old_ink_drop_state == InkDropState::HIDDEN) {
         AnimateStateChange(old_ink_drop_state, InkDropState::ACTION_PENDING,
                            animation_observer);
@@ -277,8 +283,11 @@ void SquareInkDropRipple::AnimateStateChange(
       break;
     }
     case InkDropState::ALTERNATE_ACTION_PENDING:
-      DCHECK_EQ(InkDropState::ACTION_PENDING, old_ink_drop_state)
-          << " old_ink_drop_state=" << ToString(old_ink_drop_state);
+      DLOG_IF(WARNING, InkDropState::ACTION_PENDING != old_ink_drop_state)
+          << "Invalid InkDropState transition. old_ink_drop_state="
+          << ToString(old_ink_drop_state)
+          << " new_ink_drop_state=" << ToString(new_ink_drop_state);
+
       AnimateToOpacity(visible_opacity_,
                        GetAnimationDuration(ALTERNATE_ACTION_PENDING),
                        ui::LayerAnimator::IMMEDIATELY_ANIMATE_TO_NEW_TARGET,
@@ -290,8 +299,12 @@ void SquareInkDropRipple::AnimateStateChange(
                           gfx::Tween::EASE_IN_OUT, animation_observer);
       break;
     case InkDropState::ALTERNATE_ACTION_TRIGGERED: {
-      DCHECK_EQ(InkDropState::ALTERNATE_ACTION_PENDING, old_ink_drop_state)
-          << " old_ink_drop_state=" << ToString(old_ink_drop_state);
+      DLOG_IF(WARNING,
+              InkDropState::ALTERNATE_ACTION_PENDING != old_ink_drop_state)
+          << "Invalid InkDropState transition. old_ink_drop_state="
+          << ToString(old_ink_drop_state)
+          << " new_ink_drop_state=" << ToString(new_ink_drop_state);
+
       base::TimeDelta visible_duration =
           GetAnimationDuration(ALTERNATE_ACTION_TRIGGERED_TRANSFORM) -
           GetAnimationDuration(ALTERNATE_ACTION_TRIGGERED_FADE_OUT);
